--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -36,7 +36,7 @@
     </form>
 
     <ng-template pTemplate="footer">
-      <a href="" routerLink="/register" class="register-link">Registrar</a>
+      <a href="" routerLink="/register" class="register-link">Register</a>
     </ng-template>
 
   </p-panel>
