--- a/src/app/shared/dialog/dialog.component.html
+++ b/src/app/shared/dialog/dialog.component.html
@@ -1,13 +1,17 @@
-<p-dialog header="Add new project" draggable="false" [(visible)]="displayDialog" resizable="false">
-  <form [formGroup]="projectForm">
-    <input type="text" pInputText placeholder="Project name" formControlName="name" #projectName>
-    <input type="text" pInputText placeholder="Project description" formControlName="description">
+<form [formGroup]="projectForm">
+  <p-dialog header="Add new project" draggable="false" [(visible)]="displayDialog" resizable="false">
+    <div class="input-container">
+      <input type="text" pInputText placeholder="Project name" formControlName="name" #projectName>
+      <input type="text" pInputText placeholder="Project description" formControlName="description">
+    </div>
 
-    <button pButton label="Add project" icon="pi pi-plus" [disabled]="projectForm.invalid"
-      (click)="addProject()"></button>
-    <button pButton label="Cancel" icon="pi pi-times" class="p-button-outlined" (click)="dialogControl()"></button>
-
-  </form>
-</p-dialog>
+    
+    <ng-template pTemplate="footer">
+      <button pButton label="Add project" icon="pi pi-plus" [disabled]="projectForm.invalid"
+        (click)="addProject()"></button>
+      <button pButton label="Cancel" icon="pi pi-times" class="p-button-outlined" (click)="dialogControl()"></button>
+    </ng-template>
+  </p-dialog>
+</form>
 
 <p-messages *ngIf="addProjectError" [(value)]="message"></p-messages>
